syntax = "proto3";

package auth;

option java_multiple_files = true;
option java_package = "di.fa.kaproto.auth";
option java_outer_classname = "UserProto";

import "common/common.proto";

service UserService {

  rpc ListAllUsers(common.EmptyRequest) returns (common.CommonResponse) {};

  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse) {};

  rpc LockUserByUserId(common.OnlyIdRequest) returns (common.CommonResponse) {};

}

message GetUserByUsernameRequest{
  string username = 1;
}

message GetUserByUsernameResponse{
  string id = 1;
  string username = 2;
  string email = 3;
}